--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ crashlytics-build.properties
 # GIMP files
 *.xcf
 *.xcf.meta
+
+# Annoying shader settings file
+ProjectSettings/ShaderGraphSettings.asset
