--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ crashlytics-build.properties
 
 # Annoying shader settings file
 ProjectSettings/ShaderGraphSettings.asset
+
+# Mac DS_Store files
+.DS_Store
